--- a/.htaccess
+++ b/.htaccess
@@ -2,4 +2,8 @@ AddDefaultCharset utf-8
 
 RewriteEngine On
 RewriteBase /
+
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+
 RewriteRule ^(.*)$ index.php
